Incorporated logic for environment variables

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,3 +38,8 @@ services:
     depends_on:
       - scrapper_service
       - bot
+    environment:
+      SCRAPER_URL: http://172.17.0.1:5000/scraper
+      BOT_URL: http://bot_service_container:5000/send
+      RUN_HOUR: 7  # Scheduler runtime
+      RUN_MINUTE: 0
