--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - scrapper_service
     environment:
       SCRAPER_URL: http://172.17.0.1:5001/scraper
-      BOT_URL: http://bot_service_container:5000/send
+      BOT_URL: http://172.17.0.1:5002/send_movies
       RUN_HOUR: 7  # Scheduler runtime
       RUN_MINUTE: 0
       TZ: America/Mexico_City
