fixed docker file for bot

--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -12,6 +12,12 @@ RUN apt-get update && apt-get install -y \
     locales \
     && rm -rf /var/lib/apt/lists/*
 
+# Set locale to support Spanish dates
+RUN locale-gen es_ES
+ENV LANG es_ES
+ENV LANGUAGE es_ES:es
+ENV LC_ALL es_ES
+
 # Copy application files
 COPY . /app
 
