--- a/workflows/ci-cd.yaml
+++ b/workflows/ci-cd.yaml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Docker Compose Build
         run: |
-          docker compose build
+          docker-compose build
 
       - name: Docker Compose Up
         run: |
