--- a/workflows/ci-cd.yaml
+++ b/workflows/ci-cd.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
               
-      - name: Get current dir
+      - name: Get current dir name
         run: |
           pwd
 
