--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -14,7 +14,17 @@ jobs:
         uses: actions/checkout@v3
         with:
           clean: false
-              
+
+      - name: Create .env file
+        run: |
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env
+          echo "DB_USER=${{ secrets.DB_USER }}" >> .env
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env
+          echo "DB_DATABASE=${{ secrets.DB_DATABASE }}" >> .env
+          echo "DB_PASS=${{ secrets.DB_PASS }}" >> .env
+          echo "TELEGRAM_CHANNEL_ID=${{ secrets.TELEGRAM_CHANNEL_ID }}" >> .env
+          echo "TELEGRAM_TOKEN=${{ secrets.TELEGRAM_TOKEN }}" >> .env
+
       - name: Debug Print Working Directory
         run: |
           echo "Current directory is:"
@@ -33,3 +43,8 @@ jobs:
       - name: Docker Compose Up
         run: |
           docker compose up -d
+
+      - name: Clean up .env file
+        if: always()
+        run: |
+          rm -f .env
