--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,7 @@ services:
       - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
       - TELEGRAM_CHANNEL_ID=${TELEGRAM_CHANNEL_ID}
       - SCRAPPER_URL=${SCRAPPER_URL}
+      - TELEGRAM_USER_ID=${TELEGRAM_USER_ID}
     ports:
       - "5002:5002"
 volumes:
